# wasm-pretend-main

./: Cargo.toml  LICENSE_MIT  README.md
src/: main.rs
