[package]
name = "wasm-pretend-main"
version = "0.1.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1" }
wee_alloc = { version = "0.4.2" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
